--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">NTUT_HAMS_control</string>
     <string name="name">Name</string>
     <string name="air_condition">Air condition(午) </string>
+    <string name="pref_file">com.example.user.preference_file</string>
+    <string name="pref_login_status">com.example.user.preference_login_status</string>
+    <string name="pref_user_name">com.example.user.preference_user_name</string>
 </resources>
